<!--
  ~ Copyright 2019 - 2024 Brain Craft Ltd. - All Rights Reserved
  ~
  ~ This file is a part of Video Crop.
  ~
  ~ Unauthorized copying of this file, via any medium is strictly prohibited.
  ~ Proprietary and confidential.
  ~
  ~ @author: shakib@braincraftapps.com
  ~ @file: strings.xml
  ~ @modified: Aug 21, 2024, 10:26 AM
  -->

<resources>
    <string name="app_name">Video Crop</string>

    <string name="title_select_clips">Select Clips</string>
    <string name="title_stock_videos">Stock Videos</string>
    <string name="title_export_progress">Exporting…</string>
    <string name="title_share">Share</string>

    <string name="tab_recent">Recent</string>
    <string name="tab_videos">Videos</string>
    <string name="tab_photos">Photos</string>

    <string name="button_next">Next</string>
    <string name="button_export">Export</string>
    <string name="button_camera">Camera</string>

    <string name="label_resolution">Resolution</string>
    <string name="label_frame_rate">Frame Rate</string>
    <string name="label_smart_hdr">Smart HDR</string>
    <string name="label_smart_hdr_subtitle">Convert to HDR Video</string>
    <string name="label_estimated_file_size">Estimated file size: %s</string>
    <string name="label_stock_video_search">Search stock videos</string>

    <string name="message_export_progress_description">Your video will be ready in a second. Please don\'t close or lock the screen.</string>
    <string name="message_export_share_saved">Saved!</string>
    <string name="message_export_share_description">Share video with your #Friends!</string>

    <string name="export_share_social_media_instagram">Instagram</string>
    <string name="export_share_social_media_telegram">Telegram</string>
    <string name="export_share_social_media_facebook">Facebook</string>
    <string name="export_share_social_media_whatsapp">Whatsapp</string>
    <string name="export_share_social_media_messenger">Messenger</string>
    <string name="export_share_social_media_youtube">Youtube</string>
    <string name="export_share_social_media_more">More</string>
</resources>
